# Add Eigen 
cc_library(
    name = 'eigen',
    srcs = [],
    hdrs = glob([
        'adelie/src/third_party/eigen3/Eigen/**', 
        'adelie/src/third_party/eigen3/unsupported/Eigen/**',
    ]),
    includes = ['adelie/src/third_party/eigen3'],
    visibility = ['//visibility:public'],
)

# Add adelie_core
cc_library(
    name = "adelie_core",
    hdrs = glob(["adelie/src/include/**"]),
    includes = ["adelie/src/include"],
    visibility = ["//visibility:public"],
    defines = [
        "EIGEN_MATRIXBASE_PLUGIN=\\\"adelie_core/util/eigen/matrixbase_plugin.hpp\\\"",
    ],
    deps = [
        "eigen",
    ],
)
