[tool.poetry]
name = "adelie"
version = "1.1.0"
description = ""
authors = [
    "James Yang <jamesyang916@gmail.com>",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.24.2"
pybind11 = "^2.10.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
cvxpy = "^1.3.1"

[tool.poetry.group.doc.dependencies]
sphinx = "^7.2.6"
pydata-sphinx-theme = "^0.14.1"
numpydoc = "^1.6.0"

[tool.poetry.group.dev.dependencies]
scipy = "^1.10.1"
matplotlib = "^3.7.0"
pandas = "^1.5.3"
pre-commit = "^3.1.1"
ipython = "^8.11.0"
nbformat = "^5.7.3"
jupyter = "^1.0.0"
jupytext = "^1.14.5"
cppimport = "^22.8.2"
tabulate = "^0.9.0"
group-lasso = "^1.5.0"
tqdm = "^4.65.0"
mosek = "^10.0.40"
latextable = "^1.0.0"

[tool.jupytext]
notebook_metadata_filter = "-all"
cell_metadata_filter = "-all"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "setuptools>=42", 
    "wheel", 
    "pybind11~=2.6.1",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]